--- a/pixi.toml
+++ b/pixi.toml
@@ -22,6 +22,12 @@ cmake = "*"
 make = "*"
 cxx-compiler = "*"
 
+xorg-libx11 = "*"
+xorg-libxext = "*"
+xorg-libxrender = "*"
+xorg-libxau = "*"
+xorg-libxdmcp = "*"
+
 [pypi-dependencies]
 easydict = ">=1.13"
 hydra-core = ">=1.3.2"
