--- a/sim2real/config/g1/g1_29dof_falcon.yaml
+++ b/sim2real/config/g1/g1_29dof_falcon.yaml
@@ -11,7 +11,7 @@ MOTOR_TYPE: "serial" # Motor type, "serial" or "parallel"
 
 ## SIM
 DOMAIN_ID: 0 # Domain id
-INTERFACE: "lo" # in simulation, lo0 for mac, lo for linux
+INTERFACE: "enxa0cec8fb6e85" # in simulation, lo0 for mac, lo for linux
 
 FREE_BASE: True
 
@@ -37,16 +37,16 @@ DESIRED_BASE_HEIGHT: 0.75 # Desired base height
 
 MOTOR2JOINT: [0, 1, 2, 3, 4, 5,
               6, 7, 8, 9, 10, 11,
-              12, 13, 14, 
-              15, 16, 17, 18, 19, 20, 21, 
+              12, 13, 14,
+              15, 16, 17, 18, 19, 20, 21,
               22, 23, 24, 25, 26, 27, 28]
-            
+
 JOINT2MOTOR: [0, 1, 2, 3, 4, 5,
               6, 7, 8, 9, 10, 11,
-              12, 13, 14, 
-              15, 16, 17, 18, 19, 20, 21, 
+              12, 13, 14,
+              15, 16, 17, 18, 19, 20, 21,
               22, 23, 24, 25, 26, 27, 28]
-            
+
 
 UNITREE_LEGGED_CONST:
   HIGHLEVEL: 0xEE
@@ -89,20 +89,20 @@ MOTOR_KD: [
     2.0, 1.0, 0.4, 1.0, 0.2, 0.2, 0.2
 ]
 
-dof_names: ['left_hip_yaw_joint', 'left_hip_roll_joint', 'left_hip_pitch_joint', 
+dof_names: ['left_hip_yaw_joint', 'left_hip_roll_joint', 'left_hip_pitch_joint',
             'left_knee_joint', 'left_ankle_pitch_joint', 'left_ankle_roll_joint',
             'right_hip_yaw_joint', 'right_hip_roll_joint', 'right_hip_pitch_joint',
             'right_knee_joint', 'right_ankle_pitch_joint', 'right_ankle_roll_joint',
             'waist_yaw_joint', 'waist_roll_joint', 'waist_pitch_joint',
-            'left_shoulder_pitch_joint', 'left_shoulder_roll_joint', 
+            'left_shoulder_pitch_joint', 'left_shoulder_roll_joint',
             'left_shoulder_yaw_joint', 'left_elbow_joint',
-            'left_wrist_roll_joint', 'left_wrist_pitch_joint', 
+            'left_wrist_roll_joint', 'left_wrist_pitch_joint',
             'left_wrist_yaw_joint',
             'right_shoulder_pitch_joint', 'right_shoulder_roll_joint',
             'right_shoulder_yaw_joint', 'right_elbow_joint',
             'right_wrist_roll_joint', 'right_wrist_pitch_joint',
             'right_wrist_yaw_joint']
-dof_names_upper_body: ['left_shoulder_pitch_joint', 'left_shoulder_roll_joint', 
+dof_names_upper_body: ['left_shoulder_pitch_joint', 'left_shoulder_roll_joint',
                       'left_shoulder_yaw_joint', 'left_elbow_joint',
                       'left_wrist_roll_joint', 'left_wrist_pitch_joint', 'left_wrist_yaw_joint',
                       'right_shoulder_pitch_joint', 'right_shoulder_roll_joint',
@@ -151,7 +151,7 @@ NUM_JOINTS: 29
 NUM_UPPER_BODY_JOINTS: 14
 
 DEFAULT_DOF_ANGLES: [
-    -0.1,  # left_hip_pitch_joint 
+    -0.1,  # left_hip_pitch_joint
     0.0,  # left_hip_roll_joint
     0.0,  # left_hip_yaw_joint
     0.3,  # left_knee_joint
@@ -183,7 +183,7 @@ DEFAULT_DOF_ANGLES: [
 ]
 
 DEFAULT_MOTOR_ANGLES: [
-    -0.1,  # left_hip_pitch_joint 
+    -0.1,  # left_hip_pitch_joint
     0.0,  # left_hip_roll_joint
     0.0,  # left_hip_yaw_joint
     0.3,  # left_knee_joint
@@ -214,33 +214,33 @@ DEFAULT_MOTOR_ANGLES: [
     0.0   # right_wrist_yaw_joint
 ]
 
-motor_pos_lower_limit_list: [-2.5307, -0.5236, -2.7576, -0.087267, -0.87267, -0.2618, 
-                             -2.5307, -2.9671, -2.7576, -0.087267, -0.87267, -0.2618, 
+motor_pos_lower_limit_list: [-2.5307, -0.5236, -2.7576, -0.087267, -0.87267, -0.2618,
+                             -2.5307, -2.9671, -2.7576, -0.087267, -0.87267, -0.2618,
                              -2.618, -0.52, -0.52,
-                             -3.0892, -1.5882, -2.618, -1.0472, 
+                             -3.0892, -1.5882, -2.618, -1.0472,
                              -1.972222054, -1.61443, -1.61443,
-                             -3.0892, -2.2515, -2.618, -1.0472, 
+                             -3.0892, -2.2515, -2.618, -1.0472,
                              -1.972222054, -1.61443, -1.61443]
-motor_pos_upper_limit_list: [2.8798, 2.9671, 2.7576, 2.8798, 0.5236, 0.2618, 
-                            2.8798, 0.5236, 2.7576, 2.8798, 0.5236, 0.2618, 
+motor_pos_upper_limit_list: [2.8798, 2.9671, 2.7576, 2.8798, 0.5236, 0.2618,
+                            2.8798, 0.5236, 2.7576, 2.8798, 0.5236, 0.2618,
                             2.618, 0.52, 0.52,
-                            2.6704, 2.2515, 2.618, 2.0944, 
+                            2.6704, 2.2515, 2.618, 2.0944,
                             1.972222054, 1.61443, 1.61443,
-                            2.6704, 1.5882, 2.618, 2.0944, 
+                            2.6704, 1.5882, 2.618, 2.0944,
                             1.972222054, 1.61443, 1.61443]
-motor_vel_limit_list: [32.0, 32.0, 32.0, 20.0, 37.0, 37.0, 
-                      32.0, 32.0, 32.0, 20.0, 37.0, 37.0, 
-                      32.0, 37.0, 37.0, 
-                      37.0, 37.0, 37.0, 37.0, 
+motor_vel_limit_list: [32.0, 32.0, 32.0, 20.0, 37.0, 37.0,
+                      32.0, 32.0, 32.0, 20.0, 37.0, 37.0,
+                      32.0, 37.0, 37.0,
+                      37.0, 37.0, 37.0, 37.0,
                       37.0, 22.0, 22.0,
-                      37.0, 37.0, 37.0, 37.0, 
+                      37.0, 37.0, 37.0, 37.0,
                       37.0, 22.0, 22.0]
-motor_effort_limit_list: [88.0, 88.0, 88.0, 139.0, 50.0, 50.0, 
-                        88.0, 88.0, 88.0, 139.0, 50.0, 50.0, 
+motor_effort_limit_list: [88.0, 88.0, 88.0, 139.0, 50.0, 50.0,
+                        88.0, 88.0, 88.0, 139.0, 50.0, 50.0,
                         88.0, 50.0, 50.0,
-                        25.0, 25.0, 25.0, 25.0, 
+                        25.0, 25.0, 25.0, 25.0,
                         25.0, 5.0, 5.0,
-                        25.0, 25.0, 25.0, 25.0, 
+                        25.0, 25.0, 25.0, 25.0,
                         25.0, 5.0, 5.0]
 obs_dict: {
   actor_obs: [
